jlamontSC-test/src/objects/High_School__c.object
<CustomObject>
    <description>Object to track High Schools</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City from High School CEEB Codes list</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for foreign high schools</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Type_Code__c</fullName>
        <description>1 digit code to help load and look up School Types</description>
        <label>High School Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High School Type</label>
        <referenceTo>High_School_Type__c</referenceTo>
        <relationshipLabel>High Schools</relationshipLabel>
        <relationshipName>High_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Code__c</fullName>
        <description>Code from High School CEEB Codes list</description>
        <externalId>true</externalId>
        <label>School Code</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Independent, Not Religious</fullName>
                </value>
                <value>
                    <fullName>Independent, Catholic</fullName>
                </value>
                <value>
                    <fullName>Other Independent, Religious</fullName>
                </value>
                <value>
                    <fullName>Home School Association</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Education Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>ST from High School CEEB Codes list</description>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address from High School CEEB Codes list</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <description>Field to load Zip +4 values</description>
        <label>Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_5__c</fullName>
        <description>Field to load 5-digit zip codes</description>
        <label>Zip 5</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>High School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School_Code__c</columns>
        <columns>High_School_Type__c</columns>
        <columns>High_School_Type_Code__c</columns>
        <columns>Street_Line_1__c</columns>
        <columns>Street_Line_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Postal_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>High School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>